--- a/.eslintrc
+++ b/.eslintrc
@@ -11,10 +11,12 @@
     "plugin:prettier/recommended",
     "plugin:@typescript-eslint/recommended"
   ],
-  "parser": "@typescript-eslint/parser",
+  "parser": "vue-eslint-parser",
   "parserOptions": {
+    "parser": "@typescript-eslint/parser",
     "ecmaVersion": "latest",
+    "ecmaFeatures": { "jsx": false },
     "sourceType": "module"
   },
-  "plugins": ["@typescript-eslint", "prettier"]
+  "plugins": ["@typescript-eslint", "prettier", "vue"]
 }
