--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -11,16 +11,20 @@
     "type-check": "vue-tsc --noEmit -p tsconfig.app.json --composite false"
   },
   "dependencies": {
+    "@quasar/extras": "^1.16.5",
     "pinia": "^2.1.4",
+    "quasar": "^2.12.4",
     "vue": "^3.3.4",
     "vue-router": "^4.2.4"
   },
   "devDependencies": {
+    "@quasar/vite-plugin": "^1.4.1",
     "@tsconfig/node18": "^18.2.0",
     "@types/node": "^18.17.0",
     "@vitejs/plugin-vue": "^4.2.3",
     "@vue/tsconfig": "^0.4.0",
     "npm-run-all": "^4.1.5",
+    "sass": "1.32.12",
     "typescript": "~5.1.6",
     "vite": "^4.4.6",
     "vite-plugin-eslint": "^1.8.1",
