--- a/.eslintrc
+++ b/.eslintrc
@@ -18,5 +18,8 @@
     "ecmaFeatures": { "jsx": false },
     "sourceType": "module"
   },
-  "plugins": ["@typescript-eslint", "prettier", "vue"]
+  "plugins": ["@typescript-eslint", "prettier", "vue"],
+  "rules": {
+    "vue/multi-word-component-names" : "off"
+  }
 }
